--- a/web/css/main.css
+++ b/web/css/main.css
@@ -37,16 +37,25 @@ html, body {
 
 #navigation ul li a {
     display: inline-block;
-    padding: 14px 12px 12px 46px;
-    margin-right: 30px;
+    padding: 5px 10px;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 12px;
-    color: #555;
+    color: #C3C3C3;
+    background-color: #3F3F3F;
+    border: 2px solid #121212;
+    min-width: 100px;
+    text-align: center;
 }
 
-#navigation ul li a {
+#navigation ul li a:hover {
+    color: #FFF;
+    background-color: #595959;
+}
 
+#navigation ul li a:active {
+    color: #FFF;
+    background-color: #595959;
 }
 
 
