--- a/web/js/app/templates/navigation.html
+++ b/web/js/app/templates/navigation.html
@@ -1,7 +1,7 @@
 <ul>
-    <li><a href="/main" data-load="main">Home</a></li>
-    <li><a href="/docs" data-load="docs">Documentation</a></li>
-    <li><a href="/load" data-load="load">Downloads</a></li>
-    <li><a href="/exmp" data-load="exmp">Examples</a></li>
-    <li><a href="/bugs" data-load="bugs">Bugs tracker</a></li>
+    <li><a href="/main" data-action="main" class="navigation_item">Home</a></li>
+    <li><a href="/docs" data-action="docs" class="navigation_item">Documentation</a></li>
+    <li><a href="/load" data-action="load" class="navigation_item">Downloads</a></li>
+    <li><a href="/exmp" data-action="exmp" class="navigation_item">Examples</a></li>
+    <li><a href="/bugs" data-action="bugs" class="navigation_item">Bugs tracker</a></li>
 </ul>
