--- a/demo/web/js/app/templates/navigation.html
+++ b/demo/web/js/app/templates/navigation.html
@@ -1,5 +1,5 @@
 <ul>
-    <li><a href="/main" data-action="main" class="navigation_item">Home</a></li>
+    <li><a href="/home" data-action="home" class="navigation_item">Home</a></li>
     <li><a href="/docs" data-action="docs" class="navigation_item">Documentation</a></li>
     <li><a href="/load" data-action="load" class="navigation_item">Downloads</a></li>
     <li><a href="/exmp" data-action="exmp" class="navigation_item">Examples</a></li>
