--- a/css/grid.css
+++ b/css/grid.css
@@ -1,4 +1,4 @@
-*{margin: 0; padding: 0;-webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; box-sizing: border-box;font-family: "Ubuntu Condensed", "Ubuntu", "sans", "sans-serif";font-size: 95%  }
+*{margin: 0; padding: 0;-webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; box-sizing: border-box; font-family:"sans", "sans-serif";}
 *:focus{outline: none}
 .grid1:first-child,
 .grid2:first-child,
