--- a/demo/web/css/main.css
+++ b/demo/web/css/main.css
@@ -20,9 +20,14 @@ html, body {
 
 #header{}
 
-#content{}
+#wrapper{}
 
-#sidebar{display: none;}
+#content{min-height: 300px;}
+
+#sidebar{
+    display: none;
+    border-left: 3px solid #1f1f1f;
+}
 
 #footer{}
 
@@ -70,3 +75,32 @@ html, body {
     top: 40%;
 }
 
+.btn, a.btn {
+    display: inline-block;
+    padding: 5px 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 12px;
+    color: #C3C3C3;
+    background-color: #3F3F3F;
+    border: 2px solid #121212;
+    min-width: 100px;
+    text-align: center;
+}
+.btn:hover, a.btn:hover {
+    color: #FFF;
+    background-color: #595959;
+}
+
+#sb-open.sb-opened{
+    background-color: #8d9000;
+}
+#content.sb-opened{
+    /*display: inline-block;*/
+    /*width: calc(100% - 240px);*/
+}
+#sidebar.sb-opened{
+    /*display: inline-block;*/
+    display: table-cell;
+    width: 240px;
+}
