--- a/css/grid.css
+++ b/css/grid.css
@@ -1,5 +1,5 @@
 *{margin: 0; padding: 0;-webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; box-sizing: border-box; font-family:"sans", "sans-serif";}
-*:focus{outline: none}
+*:focus, input:focus, a:focus, div:focus, span:focus{outline: none}
 .grid1:first-child,
 .grid2:first-child,
 .grid3:first-child,
