--- a/css/grid.css
+++ b/css/grid.css
@@ -69,3 +69,4 @@
 .valign_bottom{vertical-align:bottom}
 .valign_middle{vertical-align:middle}
 .valign_top{vertical-align:top}
+.select_off{-webkit-user-select: none; -moz-user-select: none; user-select: none}
