--- a/demo_com/templates/content.login.html
+++ b/demo_com/templates/content.login.html
@@ -1,16 +1,17 @@
 
-<div id="login_form">
-    <h2>Enter your personal account</h2>
-    <form name="login_form">
-        <div>
-            <input type="text" name="username" placeholder="username">
-        </div>
-        <div>
-            <input type="password" name="password"  placeholder="password">
-        </div>
-        <div>
-            <input type="submit" value="Login">
-        </div>
-    </form>
-    <div class="login_info"></div>
+<div class="login-box">
+
+        <form name="login">
+            <p>
+                <input type="text" name="username" placeholder="username">
+            </p>
+            <p>
+                <input type="password" name="password"  placeholder="password">
+            </p>
+            <p>
+                <input type="submit" class="btn" value="Login">
+            </p>
+        </form>
+        <div class="login-info"></div>
+
 </div>
