--- a/css/grid.css
+++ b/css/grid.css
@@ -1,4 +1,4 @@
-*{margin: 0; padding: 0;-webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; box-sizing: border-box; font-family:"sans", "sans-serif";}
+*{margin: 0; padding: 0;-webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; box-sizing: border-box;}
 *:focus, input:focus, a:focus, div:focus, span:focus{outline: none}
 .grid1:first-child,
 .grid2:first-child,
@@ -50,9 +50,9 @@
 .width33{width:33%}
 .width25{width:25%}
 .width10{width:10%}
-.txt_left{text-align:left}
-.txt_right{text-align:right}
-.txt_center{text-align:center}
+.txt_left,.text_left{text-align:left}
+.txt_right,.text_right{text-align:right}
+.txt_center,.text_center{text-align:center}
 .mrg_top{margin-top:0}
 .mrg_bottom{margin-bottom: 0}
 .mrg_left{margin-left: 0}
