--- a/demo_com/templates/content.login.html
+++ b/demo_com/templates/content.login.html
@@ -1,17 +1,21 @@
 
-<div class="login-box">
+<div class="login-wrapper full text_center">
 
-        <form name="login">
-            <p>
-                <input type="text" name="username" placeholder="username">
-            </p>
-            <p>
-                <input type="password" name="password"  placeholder="password">
-            </p>
-            <p>
-                <input type="submit" class="btn" value="Login">
-            </p>
-        </form>
-        <div class="login-info"></div>
+    <h1 class="login-head">Internal <span>Communication!</span></h1>
 
+    <div class="login-box">
+
+            <form name="login">
+                <p>
+                    <input type="text" name="username" placeholder="username">
+                </p>
+                <p>
+                    <input type="password" name="password"  placeholder="password">
+                </p>
+                <p class="text_right"><a class="submit_btn" href="/register">Register</a></p>
+                <p class="text_right"><a class="submit_btn" href="/login">Login</a></p>
+            </form>
+            <div class="login-info"></div>
+
+    </div>
 </div>
