--- a/demo_com/templates/content.login.html
+++ b/demo_com/templates/content.login.html
@@ -1,17 +1,1 @@
-
-<div class="login-wrapper full text_center">
-  <h1 class="login-head">Internal<span>Communication</span></h1>
-  <div class="login-box">
-    <form name="login">
-      <p>
-        <input type="text" name="username" placeholder="username"/>
-      </p>
-      <p>
-        <input type="password" name="password" placeholder="password"/>
-      </p>
-      <p class="text_right"><a href="#register" class="submit_btn">Register</a></p>
-      <p class="text_right"><a href="#login" class="submit_btn">Login</a></p>
-    </form>
-    <div class="login-info"></div>
-  </div>
-</div>
+<div class="login-wrapper full text_center"><h1 class="login-head">Internal<span>Communication</span></h1><div class="login-box"><form name="login"><p><input type="text" name="username" placeholder="username"/></p><p><input type="password" name="password" placeholder="password"/></p><p class="text_right"><a href="#register" class="submit_btn">Register</a></p><p class="text_right"><a href="#login" class="submit_btn">Login</a></p></form><div class="login-info"></div></div></div>
