--- a/demo_base/css/main.css
+++ b/demo_base/css/main.css
@@ -10,30 +10,45 @@ a:hover{
 	color: #F2A15F;
 	text-decoration: underline;
 }
-#page{
+#app-page{
 	width: 80%;
 	margin: 0 auto;
 }
-#header{
+
+#app-header{
 	min-height: 100px;
 	border-bottom: 3px solid #333;
 	color: #D86300;
 }
-#container{
-	min-height: 200px;
+
+#app-content{}
+
+#app-sidebar{
+    width: 30%;
+	border-left: 3px solid #333;
 }
-#footer{
+
+#app-footer{
 	min-height: 100px;
 	border-top: 3px solid #333;
 }
+
 .logo{
-	font-size: 450%;
+	font-size: 3em;
 	color: #686A8A; 
 	font-weight: bold;
 	text-shadow: 0px 0px 1px #A1A1A1;
 }
 
 
+
+
+
+
+/*
+#container{
+	min-height: 200px;
+}
 #container.log{
 	padding: 10px;
 	background-color: #333333;
@@ -60,3 +75,4 @@ a:hover{
 	color: #ddea27;
 	font-family: cursive, monospace, "Ubuntu Mono";
 }
+*/
