--- a/demo/main.css
+++ b/demo/main.css
@@ -12,6 +12,12 @@ html, body{
 }
 #main{}
 #sidebar{}
+#nav{}
+#nav li{display: inline}
+#nav li a{
+    display: inline-block;
+    padding:5px 10px;
+}
 #footer{}
 #section{
     width: 80%;
